deploy/ing-com-stouffcapital.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-stouffcapital-website
  namespace: websites
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - stouffcapital.com
    - www.stouffcapital.com
    - stouffcapital.ch
    - www.stouffcapital.ch
    - stouff.tech
    - www.stouff.tech
    secretName: www-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
  - host: www.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
  - host: stouffcapital.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
  - host: www.stouffcapital.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
  - host: stouff.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
  - host: www.stouff.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
